docs: update /api/transactions/me docs
