# src/routes/user.js
@@ -6,12 +6,14 @@ const router = new Router()
 const userController = makeGetUserController()
 
 // Routes
-router.get('/balance', authMiddleware, (req, res) =>
+router.get('/me/balance', authMiddleware, (req, res) =>
   userController.index(req, res),
 )
-router.get('/', authMiddleware, (req, res) => userController.show(req, res))
-router.patch('/', authMiddleware, (req, res) => userController.update(req, res))
-router.delete('/', authMiddleware, (req, res) =>
+router.get('/me', authMiddleware, (req, res) => userController.show(req, res))
+router.patch('/me', authMiddleware, (req, res) =>
+  userController.update(req, res),
+)
+router.delete('/me', authMiddleware, (req, res) =>
   userController.delete(req, res),
 )
 router.post('/', (req, res) => userController.store(req, res))
